# fast_zero

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
fast_zero/: app.py  models.py  schemas.py  security.py  settings.py
fast_zero/routes/: auth.py  todos.py  users.py
migrations/versions/: 20b8171c4215_create_created_at_and_updated_at_.py  6d79bf06d27e_create_updated_at_column_on_users_table.py  b460378aba4c_create_todos_table.py  b712aec9ff95_create_users_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
